    compressible is compressed (JSON, XML, HTML, text, ...).  DICOM files are never
    compressed over HTTP.  In prior versions, all content types were compressed.
    This notably greatly improve loading time of large DICOM 
    files through WADO-RS e.g in StoneViewer when working on large bandwidth networks.
  - When "HttpCompressionEnabled" is true, content < 2KB are never compressed.

Bug Fixes
---------

* Solved a deadlock related to the Job Engine events and plugins.  Job events are now pushed
  into a queue to be handled asynchronously by plugins.
* Zip of studies whose PatientName and PatientID did not contain any ASCII character are now valid.


REST API
--------

* API version upgraded to 22
* Added a route to delete completed jobs from history: DELETE /jobs/{id}
* added a "transcode" option to the /file route:
  e.g: /instances/../file?transcode=1.2.840.10008.1.2.4.80
* now accepting GET requests on these 3 routes to create archive/media:
  /tools/create-archive?resources=..,..2&transcode=1.2.840.10008.1.2.4.80
  /tools/create-media?resources=..,..2&transcode=1.2.840.10008.1.2.4.80
  /tools/create-media-extended?resources=..,..2&transcode=1.2.840.10008.1.2.4.80
* All 'expand' GET arguments now accepts expand=true and expand=false values.
  The /studies/../instances and sibling routes are the only whose expand is true if not specified.
  These routes now accepts expand=false to simply list the child resources ids.
* In /tools/metrics-prometheus:
  - 'orthanc_dicom_cache_size' renamed into 'orthanc_dicom_cache_size_mb'
  - added 'orthanc_storage_cache_count' and 'orthanc_storage_cache_size_mb'


Plugins
-------

* Plugins are now allowed to modify/delete private metadata/attachments
  (i.e. whose identifiers are < 1024)


Maintenance
-----------

* Fix unit test PngWriter.Color16Pattern on big-endian architectures,
  as suggested by Etienne Mollier: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1041813