@@ -122,7 +122,7 @@ namespace Orthanc
                           size_t workerIndex)
   {
     assert(engine != NULL);
-
+    Logging::SetCurrentThreadName(std::string("JOBS-WORKER-") + boost::lexical_cast<std::string>(workerIndex));
     CLOG(INFO, JOBS) << "Worker thread " << workerIndex << " has started";
 
     while (engine->IsRunning())
