@@ -112,6 +112,8 @@ namespace Orthanc
   void ServerContext::MemoryTrimmingThread(ServerContext* that,
                                            unsigned int intervalInSeconds)
   {
+    Logging::SetCurrentThreadName("MEMORY-TRIM");
+
     boost::posix_time::ptime lastExecution = boost::posix_time::second_clock::universal_time();
 
     // This thread is started only if malloc_trim is defined
@@ -140,6 +142,8 @@ namespace Orthanc
   void ServerContext::ChangeThread(ServerContext* that,
                                    unsigned int sleepDelay)
   {
+    Logging::SetCurrentThreadName("CHANGES");
+
     while (!that->done_)
     {
       std::unique_ptr<IDynamicObject> obj(that->pendingChanges_.Dequeue(sleepDelay));
@@ -182,6 +186,8 @@ namespace Orthanc
   void ServerContext::JobEventsThread(ServerContext* that,
                                       unsigned int sleepDelay)
   {
+    Logging::SetCurrentThreadName("JOB-EVENTS");
+
     while (!that->done_)
     {
       std::unique_ptr<IDynamicObject> obj(that->pendingJobEvents_.Dequeue(sleepDelay));
@@ -224,6 +230,8 @@ namespace Orthanc
   void ServerContext::SaveJobsThread(ServerContext* that,
                                      unsigned int sleepDelay)
   {
+    Logging::SetCurrentThreadName("SAVE-JOBS");
+
     static const boost::posix_time::time_duration PERIODICITY =
       boost::posix_time::seconds(10);
     
